--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
 
     <!-- Creative Design js -->
-    <script src="assets/js/creative-design.js"></script>
+    <script src="assets/js/script.js"></script>
 
 </body>
 
