--- a/index.html
+++ b/index.html
@@ -48,17 +48,22 @@
                 <div class="after">
                 </div>
                 <div class="content">
-                    <h2 style="font-size: 50px;" class="title mb-5">Uso de redes sociales en estudiantes universitarios.
+                    <h2 style="font-size: 40px;font-family: 'Times New Roman', Times, serif; font-weight: ;" class="title mb-5">Uso de
+                        redes sociales en estudiantes universitarios.
                         </h5>
                         <div class="row">
                             <div class="col">
-                                <p>En el entorno universitario, el uso de las redes sociales se ha convertido en una
+                                <p style="font-family: 'Times New Roman', Times, serif; font-size: 12px; line-height: 1.5;"
+                                    align="justify">En el entorno universitario, el uso de las redes sociales se ha
+                                    convertido en una
                                     realidad. En la actualidad, los estudiantes universitarios son nativos digitales que
                                     han crecido con acceso constante a plataformas como
                                     <b>Facebook, Instagram, Twitter y
                                         Snapchat.</b>
                                 </p>
-                                <p>Estas redes sociales ofrecen numerosas posibilidades de conectarse con sus
+                                <p style="font-family: 'Times New Roman', Times, serif; font-size: 12px; line-height: 1.5;"
+                                    align="justify">Estas redes sociales ofrecen numerosas posibilidades de conectarse
+                                    con sus
                                     compañeros, compartir información, participar en comunidades virtuales y acceder a
                                     recursos educativos.Sin embargo, también surgen una serie de interrogantes en torno
                                     a cómo el uso de las redes sociales puede afectar la productividad académica, la
@@ -66,7 +71,8 @@
                                 <p>
                             </div>
                             <div class="col">
-                                <p><b>La controversia se centra en
+                                <p style="font-family: 'Times New Roman', Times, serif; font-size: 12px; line-height: 1.5;"
+                                    align="justify"><b>La controversia se centra en
                                         si estas plataformas son herramientas valiosas para el aprendizaje y la
                                         construcción
                                         de redes profesionales, o si son meramente distracciones que desvían la atención
@@ -75,7 +81,8 @@
                                     estas
                                     plataformas puede distraer a los estudiantes de sus responsabilidades académicas y
                                     afectar su rendimiento académico. </p>
-                                <p>
+                                <p style="font-family: 'Times New Roman', Times, serif; font-size: 12px; line-height: 1.5;"
+                                    align="justify">
                                     Por otro lado, hay quienes argumentan que las
                                     redes sociales pueden ser herramientas útiles para el aprendizaje colaborativo y la
                                     expansión de conocimientos. En este sentido, es importante examinar de manera
@@ -97,7 +104,8 @@
                     <h6 class="title mb-3">Redes sociales como medio de comunicación.</h6>
                     <div class="row">
                         <div class="col">
-                            <p>Sí, consideramos que el uso de las redes sociales contribuyen a la mejora de la educación
+                            <p align="justify">Sí, consideramos que el uso de las redes sociales contribuyen a la mejora
+                                de la educación
                                 de los
                                 estudiantes universitarios, porque genera la integración de las redes sociales,
                                 beneficiando al
@@ -122,7 +130,7 @@
                                 sentido de comunidad y pertenencia, lo que puede mejorar la experiencia educativa. </p>
                         </div>
                         <div class="col">
-                            <p> <b>
+                            <p align="justify"> <b>
                                     En
                                     segundo
                                     lugar, el docente tiene un papel significativo para que las redes puedan convertirse
@@ -171,7 +179,8 @@
             <div class="row justify-content-between align-items-center">
                 <div class="col-md-6">
                     <h6 class="title mb-3">Acceso a recursos educativos.</h6>
-                    <p>Según Rosa Tafur Puente doctora en filosofía y ciencias de la educación, el acceso a contenidos
+                    <p align="justify">Según Rosa Tafur Puente doctora en filosofía y ciencias de la educación, el
+                        acceso a contenidos
                         educativos por parte los docentes ayudan a la mejoría de la calidad de la enseñanza y del
                         aprendizaje puesto que debido a la difusión de la nuevas tecnologías de la información y de la
                         comunicación se encuentran al alcance de más personas. <b>Los estudiantes tienen acceso a
@@ -184,7 +193,8 @@
                 </div>
 
                 <div class="col-md-6">
-                    <p>Los docentes no siempre poseen las herramientas necesarias para las necesidades de conocimiento y
+                    <p align="justify">Los docentes no siempre poseen las herramientas necesarias para las necesidades
+                        de conocimiento y
                         orientación que poseen los estudiantes, se requiere un aprendizaje dinámico e intuitivo para
                         desarrollar ciertas capacidades que permitan generar conocimientos. <b>Galo Flores (2017)
                             realizó
@@ -203,7 +213,7 @@
 
                 </div>
                 <div class="col-md-8">
-                    <p>Las plataformas educativas permiten a los estudiantes conectarse de manera más
+                    <p align="justify">Las plataformas educativas permiten a los estudiantes conectarse de manera más
                         eficiente y
                         mejorar su rendimiento, también existe mayor posibilidad de ahorrar más tiempo a los docentes a
                         la hora de impartir sus clases y así despertar la motivación de sus alumnos. Por último, el
@@ -236,7 +246,8 @@
                 <div class="col-md-7">
                     <h6 class="title mb-3">Conclusión.</h6>
 
-                    <p>En conclusión, si se debería considerar la contribución del uso de las redes sociales en la
+                    <p align="justify">En conclusión, si se debería considerar la contribución del uso de las redes
+                        sociales en la
                         mejora de la educación de los estudiantes universitarios. <b>Por un lado, el uso de las redes
                             sociales facilita la comunicación, pues constituye una herramienta de comunicación sin
                             fronteras
