--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                 <div class="after">
                 </div>
                 <div class="content">
-                    <h2 style="font-size: 40px;font-family: 'Times New Roman', Times, serif; font-weight: ;" class="title mb-5">Uso de
+                    <h2 style="font-size: 50px;font-family: 'Times New Roman', Times, serif;" class="title mb-5">Uso de
                         redes sociales en estudiantes universitarios.
                         </h5>
                         <div class="row">
                             <div class="col">
-                                <p style="font-family: 'Times New Roman', Times, serif; font-size: 12px; line-height: 1.5;"
+                                <p style="font-family: 'Times New Roman', Times, serif;"
                                     align="justify">En el entorno universitario, el uso de las redes sociales se ha
                                     convertido en una
                                     realidad. En la actualidad, los estudiantes universitarios son nativos digitales que
@@ -61,7 +61,7 @@
                                     <b>Facebook, Instagram, Twitter y
                                         Snapchat.</b>
                                 </p>
-                                <p style="font-family: 'Times New Roman', Times, serif; font-size: 12px; line-height: 1.5;"
+                                <p style="font-family: 'Times New Roman', Times, serif;"
                                     align="justify">Estas redes sociales ofrecen numerosas posibilidades de conectarse
                                     con sus
                                     compañeros, compartir información, participar en comunidades virtuales y acceder a
@@ -71,7 +71,7 @@
                                 <p>
                             </div>
                             <div class="col">
-                                <p style="font-family: 'Times New Roman', Times, serif; font-size: 12px; line-height: 1.5;"
+                                <p style="font-family: 'Times New Roman', Times, serif;"
                                     align="justify"><b>La controversia se centra en
                                         si estas plataformas son herramientas valiosas para el aprendizaje y la
                                         construcción
@@ -81,7 +81,7 @@
                                     estas
                                     plataformas puede distraer a los estudiantes de sus responsabilidades académicas y
                                     afectar su rendimiento académico. </p>
-                                <p style="font-family: 'Times New Roman', Times, serif; font-size: 12px; line-height: 1.5;"
+                                <p style="font-family: 'Times New Roman', Times, serif;"
                                     align="justify">
                                     Por otro lado, hay quienes argumentan que las
                                     redes sociales pueden ser herramientas útiles para el aprendizaje colaborativo y la
